# etl_python_duckdb

./: .env  Dockerfile  duckdb.db  exemplo.env  pipeline_00.py  pipeline_02.py  pyproject.toml
src/: app.py
