[tool.poetry]
name = "etl-python-duckdb"
version = "0.1.0"
description = ""
authors = ["Rafael Panegassi <70807807+rafaelpanegassi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
